# swarm

./: .gitignore  agents.md
.beads/: issues.jsonl
backend/: .env  README.md  available_models.txt  models.txt  pyproject.toml
backend/app/: config.py  eval_questions.py  main.py  model_registry.py  openrouter_client.py  schemas.py  swarm_orchestrator.py  swarm_runtime.py  telemetry.py  trace_exporter.py
backend/app/agents/: brainstorming_agent.py  judge_agent.py  planner_agent.py
backend/app/routers/: benchmarks.py  planner.py  runs.py
backend/app/scenarios/email_priority/: emails.json  evaluation.md  prompt.md
backend/artifacts/sse/: .gitignore  sample_output.txt
backend/omnitrace_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: test_e2e.py
backend/tests/: conftest.py  test_brainstorming_full_flow.py  test_eval_questions.py  test_openrouter_streaming.py  test_swarm_sse_flow.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  store.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: ChatPage.tsx  ResultsPage.tsx  SwarmPage.tsx
